src/test/resources/de/uni_luebeck/isp/tessla/core/errors/imports-ambiguous.tessla
module Foo{

    module Bar{
        def foo = "Bar"
    }

    module Baz{
        def foo = "Baz"
    }

    import Bar
    import Baz
}

out Foo.foo